Fix issue with preference toggle icon on mobile

--- a/src/views/GoTV/GoTV.styl
+++ b/src/views/GoTV/GoTV.styl
@@ -60,6 +60,11 @@
             padding: 10px
             themed background-color bg
 
+            .preference-toggle
+                position absolute
+                right 15px
+                top 15px
+
         .language-select
             flex: 1
             margin-left: 10px
